# vitrine_api

./: Cargo.toml  readme  readme.md
migrations/2023-11-21-023610_create_public/: down.sql  up.sql
src/: args.rs  db.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs
src/ops/: brand_ops.rs  department_ops.rs  mod.rs  sub_department_ops.rs
src/routes/: mod.rs
src/routes/departments/: mod.rs
src/routes/departments/sub_department/: mod.rs
src/routes/products/: mod.rs
