[package]
name = "vitrine_api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.130", features = ["derive"]}
rocket = {version = "0.5.0", features = ["json"]}
diesel = {version = "2.1.4", features = ["postgres"]}
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
